[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TurnSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/cross.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/circle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/pw_extended.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "icon",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "icon",
"speed": 5.0
} ]

[node name="TurnSelect" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SelectPlayerIconLabel" type="Label" parent="."]
margin_left = 345.5
margin_top = 25.0
margin_right = 678.5
margin_bottom = 196.0
custom_fonts/font = SubResource( 3 )
text = "Jugador 1:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrossSelect" type="Button" parent="."]
margin_left = 541.027
margin_top = 145.92
margin_right = 841.027
margin_bottom = 445.92
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CrossSelect"]
position = Vector2( 150, 150 )
scale = Vector2( 4.687, 4.687 )
frames = SubResource( 1 )
animation = "icon"

[node name="CircleSelect" type="Button" parent="."]
margin_left = 168.37
margin_top = 145.92
margin_right = 468.37
margin_bottom = 445.92
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CircleSelect"]
position = Vector2( 150, 150 )
scale = Vector2( 4.687, 4.687 )
frames = SubResource( 2 )
animation = "icon"
[connection signal="pressed" from="CrossSelect" to="." method="_on_CrossSelect_pressed"]
[connection signal="pressed" from="CircleSelect" to="." method="_on_CircleSelect_pressed"]
